# gre

./: DESCRIPTION  NAMESPACE  test-gre.Rout
R/: class.R  get_c_eta.R  get_eta.R  get_kappa.R  get_lambda.R  get_s.R  initialize_gre.R  run.R  sample_c_eta.R  sample_eta.R  sample_kappa.R  sample_lambda.R  sample_s.R  strongarm_update_everything.R  update_epsilon.R  update_sigma2.R
man/: get_c_eta.Rd  get_eta.Rd  get_kappa.Rd  get_lambda.Rd  get_s.Rd  gre-package.Rd  initialize_gre.Rd  run.Rd  sample_c_eta.Rd  sample_eta.Rd  sample_kappa.Rd  sample_lambda.Rd  sample_s.Rd  strongarm_update_everything.Rd  update_epsilon.Rd  update_sigma2.Rd
src/rust/: Cargo.toml
src/rust/src/: adaptive_params.rs  gre.rs  gre_old.rs  gre_old2.rs  kappa.rs  lambda.rs  lib.rs  s.rs
