[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
[profile.release]
debug = 1
lto = "thin"

[dependencies]
nalgebra = "0.33.0"
rand = "0.8.5"
statrs = "0.18.0"
rand_distr = "0.4.3"
roxido = { path="roxido" }
# roxido_faer = { path="roxido_faer" }

